# pcalib

./: .gitignore  CMakeLists.txt  README.md  main.py  showcase.py
pcalib/: CMakeLists.txt
pcalib/cpp/: centering.cpp  centering.h  covariance.cpp  covariance.h  eigenvalues.cpp  eigenvalues.h  eigenvectors.cpp  eigenvectors.h  gauss_solver.cpp  gauss_solver.h  matrix_ops.cpp  matrix_ops.h  projection.cpp  projection.h  variance_ratio.cpp  variance_ratio.h
pcalib/py/: algorithms.py  libpca_lib.dylib  matrix.py
tests/: test_pca.py  test_utils.py
